BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Specialty_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom object to store the list of Specialties that may be associated to a customer.  Records on this object are referenced on both customer profiles and customer change requests.</description>
    <fields>
        <fullName>BMS_Code_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the BMS Code associated to a given specialty record.</description>
        <label>BMS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCV_Code_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to capture the CCV Code of a specialty record.</description>
        <label>CCV Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to display the list of countries a given specialty record is relevant for.</description>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the description of a specialty record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_EMEA__c</fullName>
        <description>VPRO Dec-13: external ID used for migrations</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_BMS_EMEA__c</fullName>
        <description>VPRO - November 2014 - BMS EMEA Core Requirements &amp; Design: Custom field to capture the list of languages a specialty record applies to,</description>
        <label>Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Label_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the short label of a specialty record.</description>
        <label>Short Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Type_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Requirements &amp; Design: Custom field to capture the specialty type.</description>
        <label>Specialty Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Specialty</label>
    <listViews>
        <fullName>AT_Specialties</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>IE</value>
        </filters>
        <label>AT Specialties</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PT</fullName>
        <columns>NAME</columns>
        <columns>Country_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>PT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TT</fullName>
        <columns>NAME</columns>
        <columns>Country_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>GR,CY</value>
        </filters>
        <label>TT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Specialty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>